--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        testly
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Title</title>
+</head>
+<body>
+  <main>
+    <section class="messagepack">
+      <span>messagepack</span>
+    </section>
+  </main>
+</body>
 </html>
